chrome/browser/ui/app_list/app_list_syncable_service.cc
@@ -407,8 +407,10 @@ void AppListSyncableService::BuildModel() {
       arc_apps_builder_->InitializeWithProfile(profile_, model_.get());
   }
 
-  if (app_list::switches::IsDriveAppsInAppListEnabled())
+  if (app_list::switches::IsDriveAppsInAppListEnabled() &&
+      !::switches::ExtensionsDisabled()) {
     drive_app_provider_.reset(new DriveAppProvider(profile_, this));
+  }
 
   HandleUpdateFinished();
 }
